HEEDLS-885 Fixed missing border on dropdowns
Also renamed input-with-no-js-submit-button class to pagination-input-with-no-js-submit-button

--- a/DigitalLearningSolutions.Web/Styles/shared/searchableElements/common.scss
+++ b/DigitalLearningSolutions.Web/Styles/shared/searchableElements/common.scss
@@ -32,18 +32,23 @@ $button-hover-colour: #4c6272;
   }
 }
 
-.input-with-no-js-submit-button {
+.pagination-input-with-no-js-submit-button-border {
+  .js-enabled & {
+    border-right: 2px solid $nhsuk-form-border-color;
+    border-radius: 4px;
+
+    &:focus {
+      border-right: 4px solid $color_nhsuk-black;
+      margin-right: 0;
+    }
+  }
+}
+
+.pagination-input-with-no-js-submit-button {
   @extend .input-with-submit-button;
 
   #js-styling-hidden-area-while-loading & {
-    .js-enabled & {
-      border-right: 2px solid $nhsuk-form-border-color;
-      border-radius: 4px;
-
-      &:focus {
-        border-right: 4px solid $color_nhsuk-black;
-      }
-    }
+    @extend .pagination-input-with-no-js-submit-button-border
   }
 }
 
