--- a/DigitalLearningSolutions.Web/Styles/shared/searchableElements/itemsPerPage.scss
+++ b/DigitalLearningSolutions.Web/Styles/shared/searchableElements/itemsPerPage.scss
@@ -15,7 +15,7 @@
 }
 
 .items-per-page-dropdown {
-  @extend .input-with-no-js-submit-button;
+  @extend .pagination-input-with-no-js-submit-button;
   width: 100%;
 
   @include mq($from: tablet) {
