--- a/DigitalLearningSolutions.Web/Styles/shared/searchableElements/sort.scss
+++ b/DigitalLearningSolutions.Web/Styles/shared/searchableElements/sort.scss
@@ -32,7 +32,7 @@
 }
 
 .sort-direction-dropdown {
-  @extend .input-with-no-js-submit-button;
+  @extend .pagination-input-with-no-js-submit-button;
   width: 100%;
 
   @include mq($from: tablet) {
